--- a/style.css
+++ b/style.css
@@ -5,18 +5,14 @@ body {
   height: 100vh;
   display: flex;
   align-items: center;
-  /* background-color: #001220; */
   justify-content: center;
-
   }
 
 .container {
-  
 
   min-width: 600px;
   margin: auto;
   padding: 20px;
-  background: #fff;
   border-radius: 45px; 
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
 }
@@ -32,11 +28,13 @@ label {
 }
 
 input[type="text"] {
+  margin-top: 2%;
   width: 100%;
-  padding: 12px;
+  padding: 3%;
   margin-bottom: 20px;
   border-radius: 8px;
-  border: 1px solid #ccc;
+  border: none;
+  background-color: #f2f2f2;
   box-sizing: border-box;
   font-size: 16px;
   transition: border-color 0.3s ease;
@@ -79,7 +77,6 @@ button:hover {
   transition: width 0.3s ease;
 }
 
-/* Recommendation list */
 .recommendations {
   margin-top: 20px;
 }
