--- a/style.css
+++ b/style.css
@@ -1,20 +1,24 @@
 body {
-  font-family: 'Segoe UI';
+  font-family: "Segoe UI";
   margin: 0;
   padding: 0;
   height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
-  }
+}
 
 .container {
-
   min-width: 600px;
   margin: auto;
   padding: 20px;
-  border-radius: 45px; 
+  border-radius: 45px;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
 }
 
 h2 {
@@ -41,11 +45,11 @@ input[type="text"] {
 }
 
 input[type="text"]:focus {
-  border-color: #4CAF50;
+  border-color: #4caf50;
 }
 
 button {
-  background-color: #4CAF50;
+  background-color: #4caf50;
   color: white;
   padding: 14px 20px;
   margin: 8px 0;
@@ -71,7 +75,7 @@ button:hover {
 
 .progress-bar {
   height: 20px;
-  background-color: #4CAF50;
+  background-color: #4caf50;
   border-radius: 8px;
   width: 0;
   transition: width 0.3s ease;
@@ -94,3 +98,65 @@ button:hover {
   background-color: #e0e0e0;
 }
 
+/* The switch - the box around the slider */
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
+
+/* Hide default HTML checkbox */
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+/* The slider */
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+input:checked + .slider {
+  background-color: #2196f3;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #2196f3;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
